# cheri-morello-compartmentalisation

./: .buildbot.sh  .gitignore  .run_cheri_qemu_and_test.py  CMakeLists.txt  COPYRIGHT  README.md
include/: comps_offsets.h
src/: CMakeLists.txt  manager.S  switcher.S
tests/: CMakeLists.txt  run_test.sh  simple.c  simple_add.c  simple_delete.c  simple_init.c
